Changing version and fixing overflow ui bug inside tree handler

--- a/css/Style.scss
+++ b/css/Style.scss
@@ -551,7 +551,7 @@ body {
     }
     .label-text {
         display: inline-block;
-        width: 500px;
+        width: 450px;
         text-align: left;
         overflow: hidden;
         text-overflow: ellipsis;
